# polyamg-ml

./: .gitignore  CMakeLists.txt  Makefile  README.md  pyproject.toml
configs/experiments/: ann_amg.yaml  baseline.yaml  test_case2_checker2x2.yaml  test_case2_checker4x4.yaml  test_case2_vertical_split.yaml  test_case2_vertical_stripes4.yaml  theta_levels_relation_checker2x2.yaml  theta_levels_relation_checker4x4.yaml  theta_levels_relation_vertical_split.yaml  theta_levels_relation_vertical_stripes4.yaml  theta_rho_relation_checker2x2.yaml  theta_rho_relation_checker4x4.yaml  theta_rho_relation_vertical_split.yaml  theta_rho_relation_vertical_stripes4.yaml
configs/models/: paper_like_v1.yaml
cpp_core/apps/: main_ann_amg.cpp  main_baseline.cpp
cpp_core/include/polyamg/: amg_policy.hpp  amg_solver.hpp  config.hpp  discretization.hpp  experiment_runner.hpp  feature_extractor.hpp  mesh_adapter.hpp  schemas.hpp  types.hpp  version.hpp
cpp_core/include/polyamg/bindings/: interactive_api.hpp
cpp_core/include/polyamg/core/: config.hpp  petsc_handles.hpp  types.hpp
cpp_core/include/polyamg/discretization/: discretization.hpp
cpp_core/include/polyamg/experiment/: experiment_runner.hpp  result_sink.hpp
cpp_core/include/polyamg/features/: feature_extractor.hpp
cpp_core/include/polyamg/mesh/: mesh_adapter.hpp
cpp_core/include/polyamg/policy/: amg_policy.hpp
cpp_core/include/polyamg/solver/: amg_solver.hpp
cpp_core/src/: amg_policy_factory.cpp  amg_policy_grid.cpp  amg_solver.cpp  config.cpp  discretization_elliptic.cpp  experiment_runner.cpp  feature_extractor.cpp  mesh_adapter_dmplex.cpp  schemas.cpp
cpp_core/src/bindings/: interactive_api.cpp  pybind_module.cpp
cpp_core/src/experiment/: result_sink.cpp
docs/: architecture.md  experiment_protocol.md
py_ml/: requirements.txt
py_ml/polyamg_ml/: __init__.py  dataset.py  features.py  model.py
py_ml/polyamg_ml/bindings/: __init__.py  core.py
py_ml/polyamg_ml/cli/: export_model.py  generate_report.py  train_model.py
py_ml/polyamg_ml/config/: __init__.py  experiment_config.py
py_ml/polyamg_ml/data/: __init__.py  records.py
py_ml/polyamg_ml/experiments/: __init__.py  base.py
py_ml/polyamg_ml/inference/: __init__.py  exporter.py
py_ml/polyamg_ml/metrics/: __init__.py  comparison.py
py_ml/polyamg_ml/models/: __init__.py  factory.py
py_ml/polyamg_ml/reporting/: __init__.py  builders.py  exporters.py  latex.py  markdown.py  pdf.py  plots.py  result.py
py_ml/polyamg_ml/reporting/templates/: report.md.j2  report.tex.j2
py_ml/polyamg_ml/training/: __init__.py  device.py  trainer.py
scripts/: build_cpp.sh  evaluate_ann_performance.py  export_model.py  generate_report.py  generate_theta_rho_tables.py  plot_theta_levels.py  plot_theta_solver_times.py  plot_time_vs_rho.py  run_experiment.py  train_model.py
